src/test/Success/test_loop.c

int main(){
    int i;
    for(int i = 0; i < 10; i = i + 1){
        int i;
        i = 3;
    }
}