src/test/Fail/test_undec2.c
int main(){
    int x = 0;
    func(x);
}